--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
-
+        <style>
+            body{
+                background-color: red;
+            }
+        </style>
 
     </head>
     <body>
